--- a/package.json
+++ b/package.json
@@ -14,9 +14,14 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "clsx": "^2.1.1",
+    "dayjs": "^1.11.11",
+    "lucide-react": "^0.378.0",
+    "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.1.0"
+    "react-error-boundary": "^4.0.13",
+    "tailwind-merge": "^2.3.0"
   },
   "devDependencies": {
     "@cloudflare/next-on-pages": "1",
